[gd_scene load_steps=5 format=2]

[ext_resource path="res://SCRIPTS/gameover.gd" type="Script" id=1]
[ext_resource path="res://LETTERS/restart.png" type="Texture" id=2]
[ext_resource path="res://LETTERS/exit.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "show_gameover"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 341, 104 ), Vector2( -3, 104 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.592157, 0, 1, 0 ), Color( 0.592157, 0, 1, 0 ), Color( 0.592157, 0, 1, 0.560784 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("restart:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -150, 180 ), Vector2( 9.99999, 180 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("exit:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 280, 180 ), Vector2( 110, 180 ) ]
}

[node name="gameover" type="Control"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.592157, 0, 1, 0 )
margin_left = 341.0
margin_top = 104.0
margin_right = 557.0
margin_bottom = 294.0

[node name="restart" type="TouchScreenButton" parent="."]
position = Vector2( -150, 180 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )

[node name="exit" type="TouchScreenButton" parent="."]
position = Vector2( 280, 180 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 3 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/show_gameover = SubResource( 1 )

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
